# cloudsysncd

./: .dockerignore  .gitignore  Dockerfile  OPEN_SOURCE_AUDIT.md  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  pin.js  pyproject.toml  server.js  service.sh  share.js  start.sh
.github/workflows/: ci.yml
public/: app.js  index.html
scripts/: integration-test.js  smoke-test.js
shared/: sync_download.py
syncd_client/: __init__.py  cli.py
