[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsysncd-sync"
version = "1.0.0"
description = "Python polling client for cloudsysncd"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "cryptography>=41",
]

[project.scripts]
cloudsysncd-sync = "shared.sync_download:main"

[tool.setuptools]
packages = ["shared"]
